--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,15 @@
 /* css/main.css for global styles */
-body {
-  font-family: Roboto, sans-serif;
-  background: linear-gradient(135deg, #dae9ef, #9ac6ea);
-  color: #000000;
-  line-height: 1.6;
-  min-height: 100vh;
-  margin: 0;
-  position: relative;
-  padding-bottom: 100px;
-}
-
-html {
-  scroll-behavior: smooth;
-}
 
 .navbar {
   margin-bottom: 20px;
-  background-color: rgba(255, 255, 255, 0.512) !important;
+  background-color: var(--navbar-bg-color) !important;
   backdrop-filter: blur(8px);
 }
 
 .nav-link:hover {
   backdrop-filter: blur(20px);
-  background-color: rgba(255, 255, 255, 0.522);
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.15);
+  background-color: var(--nav-link-hover-bg);
+  box-shadow: 0 8px 32px 0 var(--shadow-color);
   padding: 10px;
 }
 
@@ -32,7 +18,6 @@ html {
   padding: 10px;
   display: flex;
   justify-content: center;
-
 }
 
 .nav-item {
@@ -42,12 +27,34 @@ html {
   justify-content: center;
 }
 
+.nav-item.active {
+  color: var(--nav-item-active-color);
+  font-weight: var(--nav-item-active-bold);
+}
+
+.navbar-text {
+  padding: 0 !important;
+  margin-right: 20px;
+  color: var(--user-text-color) !important;
+  font-weight: bold;
+}
+
+
+@media (max-width: 992px) {
+  .navbar-text {
+    padding: 0 !important;
+    margin-right: 0px;
+    color: var(--user-text-color) !important;
+    font-weight: bold;
+    
+  }
+}
 
 footer {
-  background-color: #e9ecef;
-  color: #000000;
+  background-color: var(--footer-bg-color);
+  color: var(--footer-text-color);
   font-size: 0.9em;
-  height: 100px;
+  height: 61.6px;
   display: flex;
   align-items: center;
   justify-content: center;
